# unemployment-analysis

./: .gitconfig  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/.github/: copilot-instructions.md
data/raw/: Pengangguran Menurut Golongan Umur, 2021.csv  Pengangguran Menurut Golongan Umur, 2024.csv  Pengangguran Menurut Golongan Umur, 2025.csv
notebooks/: 01_eda.ipynb  02_visualization.ipynb
src/: __init__.py  loader.py  transform.py  visualize.py
tests/: conftest.py  test_loader.py  test_transform.py  test_visualize.py
tests/fixtures/: Pengangguran Menurut Golongan Umur, 9999.csv
