[project]
name = "unemployment-analysis"
version = "0.1.0"
description = "Indonesian unemployment data analysis by age group (2021–2025), sourced from BPS."
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# E/W: pycodestyle errors & warnings | F: pyflakes | I: isort | UP: pyupgrade
select = ["E", "W", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
